Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
0.4.11-dev-853-g6d6e371
Description
I tested yesterday again Chrome version 37.0.2062.124:
http://www.filepuma.com/download/google_chrome_32bit_37.0.2062.124-6932/download/
Reproduction steps:
1 execute the installer
2 Chrome should start at the end of installer
3 Close Chrome
4 Terminate the chrome.exe process in taskmgr
5 add the option "--no-sandbox" to the lnk
6 restart Chrome
7 browse.
This did still work in 0.4.8-dev-641-g79d392c gcc dbg win.
When I retried yesterday with 0.4.11-dev-918-g9375788 gcc dbg win, it crashed for me in step 2 and step6.
0.4.11-dev-918-g9375788__chromeAppCrash.webm
0.4.11-dev-918-g9375788__chromeAppCrash.log
I retried with reactos-bootcd-0.4.11-dev-917-g9eb82c4-x86-gcc-lin-dbg (this time linux btw). Exactly same result: crash in step2 and step6.
I tried to spot the guilty rev, unfortunately not that easy.
0.4.11-dev-853-g6d6e371_canNotInstall.log did not allow me to even complete step1 anymore (the setup). And this means 0.4.11-dev-853-g6d6e371 is at least one guilty commit in this scenario (hopefully the only one), because
0.4.11-dev-852-g3e3560e__ok.log
0.4.11-dev-852-g3e3560e__ok.png
still allowed me to properly complete step1-7!
Attachments
Issue Links
- is blocked by
-
CORE-15421 Regression: Chromium-based browsers and CEF-based apps crashes at start
-
- Resolved
-