[DHCPSVC] Properly stub DhcpRequestParams() This will avoid crash upon Google Chrome start.

CORE-15422